variables.Variables.scala.error
Compilation error:
Variables:5: error: value ++ is not a member of Int
  steps++;
       ^Variables:12: error: value -- is not a member of Int
  steps--;
       ^