variables.Variables.scala.code

var steps:Int = 0;

while(!isOverBaggle()) {
  steps++;
  forward();
}

pickupBaggle();

while (steps > 0) {
  steps--;
  backward();
}

dropBaggle();